# SoftwareProject2025

./: .gitignore  CMakeLists.txt  LICENSE
game/: Component.h  Components.h  System.h  Systems.h
games/: TestGame.h
include/: Application.h  AssetManager.h  CollisionMath.h  Component.h  ComponentBase.h  Components.h  DebugMenu.h  Entity.h  EntityManager.h  Font.h  Game.h  Renderer.h  Scene.h  Sprite.h  SystemBase.h  Texture.h  Window.h
include/ECS/: Component.h  Entity.h  EntityManager.h  Systems.h
include/core/: Application.h  DebugMenu.h  GameInterface.h  InputManager.h  Window.h  World.h
include/graphics/: AssetManager.h  Font.h  Texture.h
src/: Application.cpp  AssetManager.cpp  CollisionMath.cpp  CollisionSystem.cpp  DebugMenu.cpp  Entity.cpp  EntityManager.cpp  Font.cpp  Game.cpp  GameplaySystem.cpp  InputManager.cpp  Main.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp  Texture.cpp  Window.cpp  World.cpp
